<resources>
    <string name="app_name">GlobalKineticWeatherApp</string>
    <string name="Permission_denied">Permission denied</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="Loading_data">Loading data</string>
    <string name="weather_forecast_by_log_and_lat">Weather Forecast</string>
    <string name="gps_permissions_off">GPS permissions Off</string>
    <string name="gps_turned_on">GPS Turned ON</string>
    <string name="permissions_granted">Permissions Granted</string>
    <string name="temperature">Temperature :</string>
    <string name="humility">Humility :</string>
    <string name="temp_min">Temp min :</string>
    <string name="temp_max">Temp max :</string>
    <string name="description">Description :</string>
    <string name="refresh">refresh</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="please_check_your_network_connection">Please check your network connection</string>
    <string name="no_lat_and_long">No lat and long</string>
</resources>